--- a/esp32-dash/package.json
+++ b/esp32-dash/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.7",
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
